# django-tree-menu

./: .env.example  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: app-testing.yml
tree_menu/app/: admin.py  models.py  urls.py
tree_menu/app/migrations/: 0001_initial.py
tree_menu/app/templatetags/: draw_menu.py  utils.py
tree_menu/config/: settings.py
tree_menu/templates/menu/: index.html  menu.html
