[tool.poetry]
name = "django-tree-menu"
version = "0.1.0"
description = "Django app древовидное меню"
authors = ["Irina Fok <fokira@mail.ru>"]
readme = "README.md"
packages = [{include = "django_tree_menu"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
load-dotenv = "^0.1.0"
mypy = "^1.0.1"
isort = "^5.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
