[tool.poetry]
name = "django-tree-menu"
version = "0.1.0"
description = "Django app древовидное меню"
authors = ["Irina Fok <fokira@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
load-dotenv = "^0.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
mypy = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
